--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "generate-password": "^1.4.1",
     "jsonwebtoken": "^8.4.0",
-    "jwt": "^0.2.0",
     "mongoose": "^5.4.5",
     "mongoose-unique-validator": "^2.0.2",
     "morgan": "^1.9.1",
-    "nodemailer": "^5.1.1",
+    "node-gyp": "^3.8.0",
     "nodemon": "^1.18.9",
+    "socket.io": "^2.2.0",
     "validator": "^10.11.0"
   },
   "scripts": {
